# WorldModelManeuverIntent

./: .gitignore  README.md  pyproject.toml
configs/: train.bulk_current.yaml  train.bulk_partial_75.yaml  train.example.yaml  train.seed32.strict75_20.yaml
configs/cohorts/: seed32.txt
scripts/: build_feature_dataset.py  download_celestrak_gp.py  download_satcat.py  download_spacetrack_bulk.py  download_spacetrack_historical_archives.py  download_spacetrack_history.py  download_spacetrack_recent_tail.py  export_onnx.py  normalize_spacetrack_corpus.py  summarize_prepared_dataset.py  train_world_model.py
src/rso_world_model/: config.py
src/rso_world_model/data/: celestrak.py  io.py  satcat.py  schemas.py  spacetrack.py
src/rso_world_model/export/: onnx.py
src/rso_world_model/features/: builder.py  environment.py  maneuvers.py  orbital.py
src/rso_world_model/model/: tcn.py  world_model.py
src/rso_world_model/training/: dataset.py  losses.py  train.py  windowing.py
tests/: test_model_shapes.py  test_windowing.py
